--- a/package.json
+++ b/package.json
@@ -1,23 +1,37 @@
 {
-  "name": "pokemon-catalogue",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@next/font": "13.4.4",
-    "@types/node": "20.2.5",
-    "@types/react": "18.2.7",
-    "@types/react-dom": "18.2.4",
-    "eslint": "8.41.0",
-    "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
-  }
+    "name": "pokemon-catalogue",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "prisma": {
+        "seed": "ts-node ./prisma/seed.ts"
+    },
+    "dependencies": {
+        "@chakra-ui/next-js": "^2.1.3",
+        "@chakra-ui/react": "^2.6.1",
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@next/font": "13.4.4",
+        "@prisma/client": "^4.14.1",
+        "@types/react": "18.2.7",
+        "@types/react-dom": "18.2.4",
+        "csv-parser": "^3.0.0",
+        "eslint": "8.41.0",
+        "eslint-config-next": "13.4.4",
+        "framer-motion": "^10.12.16",
+        "next": "13.4.4",
+        "react": "18.2.0",
+        "react-dom": "18.2.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20.2.5",
+        "prisma": "^4.14.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.0.4"
+    }
 }
