--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/react": "18.2.7",
         "@types/react-dom": "18.2.4",
         "csv-parser": "^3.0.0",
+        "discord.js": "^14.11.0",
         "eslint": "8.41.0",
         "eslint-config-next": "13.4.4",
         "framer-motion": "^10.12.16",
