membuat agar ketika page di render ulang maka akan mengkosongkan semua query string dan juga inputan filter

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "ionic:build": "npm run build",
+        "ionic:serve": "npm run start"
     },
     "prisma": {
         "seed": "ts-node ./prisma/seed.ts"
